--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -11,6 +11,83 @@ body{
     box-sizing: border-box;
 }
 
-h2.center{
+.contenedor{
+    width: 100%;
+    padding: 15px;
+}
+
+.formulario{
+    background: #fff;
+    margin-top: 150px;
+    padding: 3px;
+}
+
+h1{
     text-align: center;
+    color: #000000;
+    font-size: 40px;
+}
+
+input[type="text"], input[type="password"] {
+    font-size: 18px;
+    width: 82%;
+    padding: 10px;
+    font-family: "Nunito", sans-serif; 
+    border-color: rgb(212, 212, 212);
+    outline: 0 none; 
+}
+
+input[type="submit"] {
+    background: #005C97;
+    border: 0;
+    padding: 10px 24px;
+    color: #ffffff;
+    transition: 0.4s;
+    border-radius: 4px;
+    text-align: center;
+    margin-top: 20px;
+    margin-left: 38.5%;
+    font-family: "Nunito", sans-serif;
+    font-size: medium;
+    cursor: pointer;
+}
+
+.input-contenedor{
+    margin-bottom: 15px;
+    border: 0;
+    border-radius: 0;
+    box-shadow: none;
+    font-size: 14px;
+}
+
+.icon{
+    font-size: 25px;
+    min-width: 50px;
+    text-align: center;
+    color: #000000;
+}
+
+p{
+    text-align: center;
+}
+
+.link{
+    margin-top: 12px;
+    text-decoration: none;
+    color: #000000;
+    font-weight: 600;
+    text-align: center;
+}
+
+.link:hover{
+    color: #B8B8B8;
+}
+
+@media(min-width:768px){
+    .formulario{
+        margin: auto;
+        width: 500px;
+        margin-top: 150px;
+        border-radius: 2%;
+    }
 }
