--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
     <head>
         <title>La Rockola.com - Pagina principal</title>
         <meta charset="UTF-8">
@@ -8,26 +8,26 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
         <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
-        <h2 class="center">Bienvenidos a la Rockola</h2>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Barra de navegación</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link" href="#">Lista de canciones</a>
-                        <a class="nav-link" href="#">Mis playlists</a>
-                        <a class="nav-link" href="#">Lista de generos</a>
-                        <a class="nav-link" href="#">Lista de compositores</a>
-                    </div>
+        <form class="formulario" action="" method="post">
+            <h1 class="center">Bienvenido a la Rockola</h1>
+            <div class="contenedor">
+                <div class="input-contenedor">
+                    <i class="bx bx-user icon"></i>
+                    <input type="text" name="correo" placeholder="Ingrese su correo electrónico">
                 </div>
+                <div class="input-contenedor">
+                    <i class="bx bx-key icon"></i>
+                    <input type="password" name="contrasena" placeholder="Ingrese su contraseña">
+                </div>
+                <input type="submit" value="Acceder">
+                <p></p>
+                <p><a class="link" href="" style="text-decoration:none">¿Olvidó su contraseña?</a><p>
             </div>
-        </nav>
+        </form>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     </body>
 </html>
