--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,29 +5,37 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-        <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
-        <form class="formulario" action="" method="post">
-            <h1 class="center">Bienvenido a la Rockola</h1>
-            <div class="contenedor">
-                <div class="input-contenedor">
-                    <i class="bx bx-user icon"></i>
-                    <input type="text" name="correo" placeholder="Ingrese su correo electrónico">
+        <div>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="g">La Rockola</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link disabled">Lista de canciones</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link disabled">Mis playlists</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/generos">Lista de géneros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/generos/form">Nuevo género</a>
+                            </li>
+                        </ul>
+                     </div>
                 </div>
-                <div class="input-contenedor">
-                    <i class="bx bx-key icon"></i>
-                    <input type="password" name="contrasena" placeholder="Ingrese su contraseña">
-                </div>
-                <input type="submit" value="Acceder">
-                <p></p>
-                <p><a class="link" href="" style="text-decoration:none">¿Olvidó su contraseña?</a><p>
-            </div>
-        </form>
+            </nav>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     </body>
 </html>
