--- a/src/main/resources/templates/listageneros.html
+++ b/src/main/resources/templates/listageneros.html
@@ -7,32 +7,63 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     </head>
     <body>
-        //Barra
-
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="g">La Rockola</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link disabled">Lista de canciones</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link disabled">Mis playlists</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="/generos">Lista de géneros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/generos/form">Nuevo género</a>
+                            </li>
+                        </ul>
+                     </div>
+                </div>
+            </nav>
         <div class="container">
-            <<h2>Lista de géneros</h2>
+            <h2>Lista de géneros</h2>
             <form action="/generos" method="get">
                 <label for="criterio">Buscar por:</label>
                 <input type="text" th:value="${criterio}" id="criterio" name="criterio">
                 <input type="submit" value="Buscar">
             </form>
-            <table class="table">
+            <br>
+            <table class="table table-dark table-striped">
                 <thead>
                     <tr>
                         <th scope="col">Id</th>
                         <th scope="col">Nombre</th>
                         <th scope="col">Carpeta</th>
                         <th scope="col">Estado</th>
+                        <th scope="col">Acciones</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr th:if="${not #lists.isEmpty(generos)}" th:each="genero : ${generos}">
-                        <th scope="row" th:text="${genero.id}">...</th>
+                        <td scope="row" th:text="${genero.id}">...</td>
                         <td th:text="${genero.nombre}">...</td>
                         <td th:text="${genero.carpeta}">...</td>
                         <td th:text="${genero.estado}">...</td>
+                        <td>
+                            <a th:href="${'/generos/form/' + genero.id}">Editar</a>
+                            <a th:href="${'/generos/eliminar/' + genero.id}">Eliminar</a>
+                        </td>
                     </tr>
-                    <tr th:unless="${#lists.isEmpty(generos)}">
+                    <tr th:if="${#lists.isEmpty(generos)}">
                         <td colspan="4">No se encontraron registros</td>
                     </tr>
                 </tbody>
