Creación de: controlador Canciones; formularios: géneros, canciones; listas: canciones, géneros; actualización del controlador web genero

--- a/src/main/resources/templates/formgeneros.html
+++ b/src/main/resources/templates/formgeneros.html
@@ -9,7 +9,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="g">La Rockola</a>
+                <a class="navbar-brand" href="">La Rockola</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -19,22 +19,19 @@
                             <a class="nav-link" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled">Lista de canciones</a>
+                            <a class="nav-link" href="/canciones">Canciones</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link disabled">Mis playlists</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/generos">Lista de géneros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="/generos/form">Nuevo género</a>
+                            <a class="nav-link active" href="/generos">Géneros</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        
+
         <div class="container">
             <h3>Formulario de géneros</h3>
             <form action="/generos" th:object="${genero}" method="post">
