--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
         <div>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="g">La Rockola</a>
+                    <a class="navbar-brand" href="">La Rockola</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -20,19 +20,16 @@
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled">Lista de canciones</a>
+                                <a class="nav-link" href="/canciones">Canciones</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link disabled">Mis playlists</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/generos">Lista de géneros</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/generos/form">Nuevo género</a>
+                                <a class="nav-link" href="/generos">Géneros</a>
                             </li>
                         </ul>
-                     </div>
+                    </div>
                 </div>
             </nav>
         </div>
