--- a/src/main/resources/templates/listacanciones.html
+++ b/src/main/resources/templates/listacanciones.html
@@ -1,10 +1,82 @@
-<html>
+<!DOCTYPE html>
+<html xmlns:tn="http://www.thymeleaf.org">
     <head>
-        <title>Lista de canciones</title>
+        <title>La Rockola.com - Canciones</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     </head>
     <body>
-        <div>Lista de canciones</div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="">La Rockola</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="/canciones">Canciones</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link disabled">Mis playlists</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/generos">Géneros</a>
+                            </li>
+                        </ul>
+                     </div>
+                </div>
+            </nav>
+        <div class="container">
+            <h2>Lista de canciones</h2>
+            <form action="/canciones" method="get">
+                <label for="criterio">Buscar por:</label>
+                <input type="text" th:value="${criterio}" id="criterio" name="criterio">
+                <input type="submit" value="Buscar">
+                &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+                <a href="/canciones/form">Nueva Cancion</a>
+                <div>
+                    
+                </div>
+            </form>
+            <br>
+            <table class="table table-dark table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col">Id</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Año de Publicación</th>
+                        <th scope="col">Duración</th>
+                        <th scope="col">Género</th>
+                        <th scope="col">Interprete</th>
+                        <th scope="col">Compositor</th>
+                        <th scope="col">Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:if="${not #lists.isEmpty(canciones)}" th:each="cancion : ${canciones}">
+                        <td scope="row" th:text="${cancion.id}">...</td>
+                        <td th:text="${cancion.nombre}">...</td>
+                        <td th:text="${cancion.anioPublicacion}">...</td>
+                        <td th:text="${cancion.duracion}">...</td>
+                        <td th:text="${cancion.genero.nombre}">...</td>
+                        <td th:text="${cancion.interprete.nombre}">...</td>
+                        <td th:text="${cancion.compositor.nombre}">...</td>
+                        <td>
+                            <a th:href="${'/canciones/form/' + cancion.id}">Editar</a>
+                            <a th:href="${'/canciones/eliminar/' + cancion.id}">Eliminar</a>
+                        </td>
+                    </tr>
+                    <tr th:if="${#lists.isEmpty(canciones)}">
+                        <td colspan="8">No se encontraron registros</td>
+                    </tr>
+                </tbody>
+            </table> 
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     </body>
 </html>
