--- a/src/main/resources/templates/formgeneros.html
+++ b/src/main/resources/templates/formgeneros.html
@@ -34,25 +34,25 @@
 
         <div class="container">
             <h3>Formulario de géneros</h3>
-            <form action="/generos" th:object="${genero}" method="post">
+            <form action="/generos" th:object="${genero}" method="post" class="row g-3">
                 <div>
                     <input type="hidden" th:field="*{id}" id="id" name="id" readonly>
                 </div>
-                <div>
-                    <label for="nombre">Nombre</label>
+                <div class="col-md-6">
+                    <label for="nombre" class="form-label">Nombre</label>
                     <input type="text" th:field="*{nombre}" id="nombre" name="nombre" maxlength="45" required>
                 </div>
-                <div>
-                    <label for="carpeta">Carpeta</label>
+                <div class="col-md-6">
+                    <label for="carpeta" class="form-label">Carpeta</label>
                     <input type="text" th:field="*{carpeta}" id="carpeta" name="carpeta" maxlength="45" required>
                 </div>
-                <div>
-                    <label for="estado">Estado</label>
+                <div class="col-md-6">
+                    <label for="estado" class="form-label">Estado</label>
                     <input type="checkbox" th:field="*{estado}" id="estado" name="estado">
                 </div>
-                <div>
-                    <input type="submit" value="Guardar">
-                    <a href="/generos">Cancelar</a>
+                <div class="col-md-6">
+                    <input type="submit" value="Guardar" class="form-label">
+                    <a href="/generos" >Cancelar</a>
                 </div>
             </form>
         </div>
