--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,21 +12,20 @@
         <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
-        <form class="formulario" action="" method="post">
+        <form class="formulario" th:action="@{inicio}" method="post">
             <h1 class="center">Bienvenido a la Rockola</h1>
             <div class="contenedor">
                 <div class="input-contenedor">
                     <i class="bx bx-user icon"></i>
-                    <input type="text" name="correo" placeholder="Ingrese su correo electrónico">
+                    <input type="text" th:value="${criterio} "id="criterio" name="criterio" placeholder="Ingrese su correo electrónico">
                 </div>
                 <div class="input-contenedor">
                     <i class="bx bx-key icon"></i>
-                    <input type="password" name="contrasena" placeholder="Ingrese su contraseña">
+                    <input type="password" th:value="${criterio2}" id="criterio2" name="criterio2" placeholder="Ingrese su contraseña">
+                    <input type="submit" value="Acceder">
+                    <p></p>
+                    <p><a class="link" href="" style="text-decoration:none">¿Olvidó su contraseña?</a><p>
                 </div>
-                <input type="submit" value="Acceder">
-                <p></p>
-                <p><a class="link" href="" style="text-decoration:none">¿Olvidó su contraseña?</a><p>
-            </div>
         </form>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     </body>
